# esilv-social-engineering-td3

./: .gitignore  README.md  bertopic_results.ipynb  cotation_amiraute.ipynb  dataset_unifie.csv  docker-compose.yml  note_renseignement.md  notebook copy.ipynb  notebook.ipynb  preprocess_data.ipynb
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/d3lta/: devcontainer.json
.devcontainer/python/: devcontainer.json
D3lta/: .gitignore  pyproject.toml
D3lta/.devcontainer/: Dockerfile  devcontainer.json
D3lta/.github/workflows/: publish-to-pypi.yml  test.yml
D3lta/d3lta/: emojis_remover.py
D3lta/tests/: emojis_remover_test.py  faissd3lta_test.py  get_unicode_emojis_list.py
donnees/: articles_web.txt  facebook_posts.json  metadata_comptes.json  relations_network.csv  textes_analyse_sentiment.txt  tweets_dataset.csv
gephi/: exercice3.md
gephi/graph_distance_report/average_degree/: report.html
gephi/graph_distance_report/n_communities/n_communities/: report.html
gephi/graph_distance_report/path_length/: report.html
shared/d3lta/: .gitignore  clusters_coordination.ipynb  myembeddings.pkl  notebook.ipynb
