[project]
name = "d3lta"
version = "1.0.2"
description = "A library for detecting verbatim-duplicated contents within a vast amount of documents"
readme = "README.md"
authors = [{ name = "VIGINUM" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu==1.9.0.post1",
    "fasttext==0.9.3",
    "gensim==4.3.3",
    "networkx==2.8.8",
    "pandas==2.2.3",
    "polyleven==0.8",
    "scipy==1.12.0",
    "tensorflow==2.18.0",
    "tensorflow-hub==0.16.1",
    "tensorflow-text==2.18.1",
    "tqdm==4.67.1",
]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
